# ls_solver

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  criterion.toml  result.json  times.json
benches/: ls_solver_benchmark.rs
benches/test_matrices/: vem1.mtx  vem2.mtx
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/ls_solver/: all.html  index.html  sidebar-items.js
doc/ls_solver/api/: enum.Method.html  fn.compute_precision.html  fn.init_random_vector.html  fn.init_solution.html  fn.read_matrix_from_matrix_market_file.html  fn.read_vector_from_file.html  fn.solve_linear_system.html  index.html  sidebar-items.js  struct.Performance.html  struct.Stat.html
doc/ls_solver/cg_solve/: fn.compute_alpha.html  fn.compute_beta.html  index.html  sidebar-items.js
doc/ls_solver/gradient_solve/: fn.compute_gr_update.html  index.html  sidebar-items.js
doc/ls_solver/gs_solve/: fn.compute_gs_update.html  fn.get_gs_p.html  index.html  sidebar-items.js
doc/ls_solver/io/: fn.get_max_iter.html  fn.get_method.html  fn.get_omega.html  fn.get_tol.html  fn.parse_vector.html  fn.read_matrix.html  fn.read_vector.html  fn.write_to_output_path.html  index.html  sidebar-items.js
doc/ls_solver/jacobi_solve/: fn.compute_jacobi_update.html  fn.get_jacobi_p.html  index.html  sidebar-items.js
doc/ls_solver/pgr_solve/: fn.compute_precond_residue.html  fn.compute_z.html  fn.get_precond_alpha_k.html  index.html  sidebar-items.js
doc/ls_solver/solver/: fn.exec.html  index.html  sidebar-items.js
doc/ls_solver/utility/: enum.Setting.html  fn.compute_rel_err.html  fn.compute_residue.html  fn.init_b.html  fn.init_support_vectors.html  fn.size_are_compatible.html  fn.tolerance_reached.html  index.html  sidebar-items.js
doc/src/ls_solver/: api.rs.html  cg_solve.rs.html  gradient_solve.rs.html  gs_solve.rs.html  io.rs.html  jacobi_solve.rs.html  lib.rs.html  pgr_solve.rs.html  solver.rs.html  utility.rs.html
plots/criterion/: index.html
plots/criterion/report/: index.html
plots/criterion/reports/: index.html
plots/criterion/spa1/: index.html
plots/criterion/spa2/: index.html
plots/criterion/vem1/: index.html
plots/criterion/vem2/: index.html
src/: api.rs  build.rs  cg_solve.rs  gradient_solve.rs  gs_solve.rs  io.rs  jacobi.rs  jacobi_solve.rs  lib.rs  main.rs  pgr_solve.rs  preconditioned_gr.rs  solver.rs  sparse_matrix_product.c  utility.rs
(+744 files in other folders)
