[package]
name = "ls_solver"
description = "A simple tool and library for linear system solution"
version = "0.1.0"
edition = "2021"
authors = ["Davide Monti <d.monti11@campus.unimib.it>", "Samuele Campanella <s.campanella3@campus.unimib.it>"]
keywords = ["linear_system_solver", "sparse_matrices", "linear_algebra"]
repository = "https://github.com/dcmonti/ls_solver"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
nalgebra = { version = "0.32.2", features = ["io", "sparse", "rand", "libm-force"] }
nalgebra-sparse = { version = "0.9.0", features = ["io"] }
rayon = "1.7.0"

[dev-dependencies]
criterion = {version = "0.4.0", features = ["html_reports"]}

[[bench]]
name = "ls_solver_benchmark"
harness = false

[profile.release]
lto = true
panic = "abort"
codegen-units=1
